Fixing padding on soapbox on small-to-medium screens

--- a/_scss/bbg/_variables-bbg.scss
+++ b/_scss/bbg/_variables-bbg.scss
@@ -61,6 +61,7 @@ $social-icon-home:				40px;
 // Site margins
 $site-margins-small:          1rem;
 $site-margins-medium:         $site-margins / 2;
+$site-margins-medium-plus:	  $site-margins-small * 2;
 //$site-margins:              3rem;//defined in _variables.scss
 $site-margins-large:          $site-margins * 2;
 $bbg-grid-gutter:             2.35765%;
